--- a/web-nutrition/nutrition-index.html
+++ b/web-nutrition/nutrition-index.html
@@ -147,7 +147,7 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <div class="img"><img src="./images/养素贝儿牛初乳咀嚼片.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
@@ -155,7 +155,7 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo2.png" alt=""></div>
+                    <div class="img"><img src="./images/养素贝儿维生素C泡腾片（针叶樱桃味）.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
@@ -163,7 +163,7 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo2.png" alt=""></div>
+                    <div class="img"><img src="./images/养素贝儿艾兰得®多种维生素铁锌含片.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
@@ -171,7 +171,7 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <div class="img"><img src="./images/养素贝儿艾兰得®维生素AD软胶囊.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
@@ -179,7 +179,7 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <div class="img"><img src="./images/养素贝儿艾兰得®钙颗粒.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
@@ -187,7 +187,31 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <div class="img"><img src="./images/母之语乳铁蛋白调制乳粉.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/母之语蓝莓唾液酸DHA藻油.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/艾兰得维生素C含片（桔子味）.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/艾兰得维生素C含片（草莓味）.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
