--- a/web-healthy/healthy-second-1.html
+++ b/web-healthy/healthy-second-1.html
@@ -44,7 +44,7 @@
 			<ul class="left">
 				<li class="active">肿瘤</li>
 				<li>心脑血管疾病</li>
-				<li>消化系统</li>
+				<li>内分泌代谢系统</li>
 				<li>五官及皮肤病</li>
 			</ul>
 
