--- a/web-healthy/healthy-third-red.html
+++ b/web-healthy/healthy-third-red.html
@@ -17,6 +17,7 @@
 <body class="style-red bg-2">
     <header class="third-header-2">
         <img src="./images/疾病风险切图/2red-head-bg.png" alt="">
+        <a class="back" href=""><img src="./images/2back.png" alt=""></a>
         <h3>高血压</h3>
         <p>HYPERTENSION</p>
     </header>
