--- a/web-healthy/healthy-third-blue.html
+++ b/web-healthy/healthy-third-blue.html
@@ -71,7 +71,7 @@
 
     <div class="report-div">
         <div class="report-title"><i class="site-blue"></i><span>我的基因位点</span><em>MY GENE SITE</em></div>
-        <div class="sport-table">
+        <div class="sport-table special">
                 <div class="tr">
                     <span class="th"><span> 基因</span></span>
                     <span class="th"><span> 位点</span></span>
