--- a/web-healthy/healthy-third-red.html
+++ b/web-healthy/healthy-third-red.html
@@ -76,20 +76,24 @@
                     <span class="th"><span> 基因</span></span>
                     <span class="th"><span> 位点</span></span>
                     <span class="th"><span> 结果</span></span>
+                    <span class="th"><span> 结果结果</span></span>
                 </div>
                 <div class="tr">
                     <span class="td">VDR</span>
                     <span class="td">of6699905</span>
+                    <span class="td">CC</span>
                     <span class="td">CC</span>
                 </div>
                 <div class="tr">
                     <span class="td">LRP5</span>
                     <span class="td">of9783346</span>
                     <span class="td">CC</span>
+                    <span class="td">CC</span>
                 </div>
                 <div class="tr">
                     <span class="td">VDR</span>
                     <span class="td">of6699905</span>
+                    <span class="td">CC</span>
                     <span class="td">CC</span>
                 </div>
             </div>
