--- a/web-healthy/healthy-second-2.html
+++ b/web-healthy/healthy-second-2.html
@@ -16,11 +16,13 @@
 
 <body>
     <header class="second-header-2">
-        <img class="bg" src="./images/单基因切图/headbg.png" alt="">
-        <a class="back" href=""><img src="./images/单基因切图/back.png" alt=""></a>
-        <img class="icon" src="./images/单基因切图/icon.png" alt="">
+        <img class="bg" src="./images/B/headbg.png" alt="">
+        <a class="back" href=""><img src="./images/B/back.png" alt=""></a>
+        <img class="icon" src="./images/B/icon.png" alt="">
         <h2>单基因遗传病</h2>
         <p>MONOGENIC HEREDITARY DISEASE</p>
+
+        <div class="report-detail yellow"><i></i>报告说明</div>
     </header>
 
     <div class="second-2-con">
