--- a/web-healthy/healthy-second-3.html
+++ b/web-healthy/healthy-second-3.html
@@ -16,11 +16,13 @@
 
 <body class="bg-3">
     <header class="second-header-2">
-        <img class="bg" src="./images/安全切图/headbg.png" alt="">
-        <a class="back" href=""><img src="./images/安全切图/back.png" alt=""></a>
-        <img class="icon" src="./images/安全切图/icon.png" alt="">
+        <img class="bg" src="./images/A/headbg.png" alt="">
+        <a class="back" href=""><img src="./images/A/back.png" alt=""></a>
+        <img class="icon" src="./images/A/icon.png" alt="">
         <h2>安全用药</h2>
         <p>SAFE MEDICATION</p>
+
+        <div class="report-detail green"><i></i>报告说明</div>
     </header>
 
     <div class="second-2-con">
