--- a/web-healthy/healthy-third-blue.html
+++ b/web-healthy/healthy-third-blue.html
@@ -16,7 +16,7 @@
 
 <body class="style-blue bg-2">
     <header class="third-header-2">
-        <img src="./images/疾病风险切图/2blue-head-bg.png" alt="">
+        <img src="./images/C/2blue-head-bg.png" alt="">
         <a class="back" href=""><img src="./images/1back.png" alt=""></a>
         <h3>高血压</h3>
         <p>HYPERTENSION</p>
@@ -117,6 +117,20 @@
         </div>
     </div>
 
+    <div class="dialog-alert">
+        <div class="bg"></div>
+        <div class="in">
+            <h2>免责声明</h2>
+            <div class="con">
+                <p>免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明。</p>
+                <p>免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明。免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明。</p>
+                <p>免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明。免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明免责声明。</p>
+            </div>
+            <p class="notice">点击此处或弹窗外区域关闭免责声明</p>
+        </div>
+    </div>
+
+    <a class="btn btn-blue" id="showdialog">免责声明</a>
     <a class="btn btn-blue">上一项  先天性心脏病</a>
     <a class="btn btn-blue">下一项  冠心病</a>
     <a class="btn btn-blue">返回 首页</a>
