--- a/web-healthy/healthy-third-innormal.html
+++ b/web-healthy/healthy-third-innormal.html
@@ -16,8 +16,8 @@
 
 <body class="style-green bg-2">
     <header class="third-header">
-        <img src="./images/安全切图/1headbg.png" alt="">
-        <a class="back" href=""><img src="./images/安全切图/back.png" alt=""></a>
+        <img src="./images/A/1headbg.png" alt="">
+        <a class="back" href=""><img src="./images/A/back.png" alt=""></a>
         <h3>氯吡格雷</h3>
         <p>CLOPIDOGREL</p>
     </header>
