--- a/web-healthy/healthy-third-has.html
+++ b/web-healthy/healthy-third-has.html
@@ -16,8 +16,8 @@
 
 <body class="bg-2">
     <header class="third-header">
-        <img src="./images/单基因切图/2-1headbg.png" alt="">
-        <a class="back" href=""><img src="./images/单基因切图/2-1back.png" alt=""></a>
+        <img src="./images/B/2-1headbg.png" alt="">
+        <a class="back" href=""><img src="./images/B/2-1back.png" alt=""></a>
         <h3>囊性纤维化</h3>
         <p>CYSTIC FIBROSIS</p>
     </header>
