--- a/web-healthy/healthy-second-1.html
+++ b/web-healthy/healthy-second-1.html
@@ -31,7 +31,7 @@
 			<li>子宫肌瘤</li>
 		</ul>
 
-		<div class="report-detail blue"><i></i>报告说明</div>
+		<a href="" class="report-detail blue"><i></i>报告说明</a>
 	</header>
 
 	<div class="second-1-con">
