--- a/web-healthy/healthy-second-2.html
+++ b/web-healthy/healthy-second-2.html
@@ -22,7 +22,7 @@
         <h2>单基因遗传病</h2>
         <p>MONOGENIC HEREDITARY DISEASE</p>
 
-        <div class="report-detail yellow"><i></i>报告说明</div>
+        <div class="report-detail yellow">报告说明 ></div>
     </header>
 
     <div class="second-2-con">
