--- a/web-healthy/healthy-third-none.html
+++ b/web-healthy/healthy-third-none.html
@@ -18,7 +18,7 @@
     <header class="third-header">
         <img src="./images/B/2-1headbg.png" alt="">
         <a class="back" href=""><img src="./images/B/2-1back.png" alt=""></a>
-        <h3>囊性纤维化</h3>
+        <h3>囊性纤维化囊性纤维化囊性纤维化囊性纤维化</h3>
         <p>CYSTIC FIBROSIS</p>
     </header>
 
