--- a/web-healthy/healthy-third-red.html
+++ b/web-healthy/healthy-third-red.html
@@ -72,12 +72,13 @@
     <div class="report-div">
         <div class="report-title"><i class="site-red"></i><span>我的基因位点</span><em>MY GENE SITE</em></div>
         <div class="sport-table">
-                <div class="tr">
-                    <span class="th"><span> 基因</span></span>
-                    <span class="th"><span> 位点</span></span>
-                    <span class="th"><span> 结果</span></span>
-                    <span class="th"><span> 结果结果</span></span>
-                </div>
+            <div class="tr">
+                <span class="th"><span> 基因</span></span>
+                <span class="th"><span> 位点</span></span>
+                <span class="th"><span> 结果</span></span>
+                <span class="th"><span> 结果结果</span></span>
+            </div>
+            <div class="tbody">
                 <div class="tr">
                     <span class="td">VDR</span>
                     <span class="td">of6699905</span>
@@ -96,7 +97,26 @@
                     <span class="td">CC</span>
                     <span class="td">CC</span>
                 </div>
+                <div class="tr">
+                    <span class="td">VDR</span>
+                    <span class="td">of6699905</span>
+                    <span class="td">CC</span>
+                    <span class="td">CC</span>
+                </div>
+                <div class="tr">
+                    <span class="td">VDR</span>
+                    <span class="td">of6699905</span>
+                    <span class="td">CC</span>
+                    <span class="td">CC</span>
+                </div>
+                <div class="tr">
+                    <span class="td">VDR</span>
+                    <span class="td">of6699905</span>
+                    <span class="td">CC</span>
+                    <span class="td">CC</span>
+                </div>
             </div>
+        </div>
     </div>
 
     <div class="report-div">
@@ -121,8 +141,8 @@
         </div>
     </div>
 
-    <a class="btn btn-red">上一项  先天性心脏病</a>
-    <a class="btn btn-red">下一项  冠心病</a>
+    <a class="btn btn-red">上一项 先天性心脏病</a>
+    <a class="btn btn-red">下一项 冠心病</a>
     <a class="btn btn-red">返回首页</a>
 
     <script src="js/jquery.min.js"></script>
