--- a/web-nutrition/nutrition-index-2.html
+++ b/web-nutrition/nutrition-index-2.html
@@ -92,7 +92,7 @@
         </ul>
         <p class="rec-color">每日营养推荐摄入量：</p>
 
-        <ul class="food-list">
+        <ul class="food-list big">
             <li>
                 <a href="">
                     <img src="./images/1-icon-8.png" alt="">
