--- a/web-healthy/healthy-third-blue.html
+++ b/web-healthy/healthy-third-blue.html
@@ -77,20 +77,17 @@
                     <span class="th"><span> 位点</span></span>
                     <span class="th"><span> 结果</span></span>
                 </div>
-                <div class="tr">
-                    <span class="td">VDR</span>
-                    <span class="td">of6699905</span>
-                    <span class="td">CC</span>
-                </div>
-                <div class="tr">
-                    <span class="td">LRP5</span>
-                    <span class="td">of9783346</span>
-                    <span class="td">CC</span>
-                </div>
-                <div class="tr">
-                    <span class="td">VDR</span>
-                    <span class="td">of6699905</span>
-                    <span class="td">CC</span>
+                <div class="tbody">
+                    <div class="tr">
+                        <span class="td">VDR</span>
+                        <span class="td">of6699905</span>
+                        <span class="td">CC</span>
+                    </div>
+                    <div class="tr">
+                        <span class="td">LRP5</span>
+                        <span class="td">of9783346</span>
+                        <span class="td">CC</span>
+                    </div>
                 </div>
             </div>
     </div>
