--- a/web-tsu3/index-1.html
+++ b/web-tsu3/index-1.html
@@ -13,124 +13,165 @@
 	<script src="js/fn.js"></script>
 </head>
 
-<body>
+<body class="type-1">
 	<!-- 引用原来线上代码 -->
-	
+
 	<!-- 引用原来线上代码 end -->
-	<!-- 轮播图 -->
-	<section class="carousel">
-		<div class="swiper-container">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<a href="javascript:;">
-						<img src="./images/swiper1_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
-					</a>
-				</div>
-				<div class="swiper-slide">
-					<a href="javascript:;">
-						<img src="./images/swiper2_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
-					</a>
-				</div>
-				<div class="swiper-slide">
-					<a href="javascript:;">
-						<img src="./images/swiper3_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
-					</a>
-				</div>
-				<div class="swiper-slide">
-					<a href="javascript:;">
-						<img src="./images/swiper4_02.png">
-						<div class="center"><span>清华大学经济管理学院2018级本科生开学典礼暨入学导向举行</span></div>
-					</a>
-				</div>
 
-			</div>
-			<!-- 如果需要分页器 -->
-			<div class="bannar-swiper-pagination swiper-pagination" id="center"></div>
+	<div class="itools">
+		<ul>
+			<li>项目概况</li>
+			<li>课程体系</li>
+			<li>师资阵容</li>
+			<li>招生政策</li>
+			<li>报考流程</li>
+		</ul>
+		<a href="">我要申请</a>
+	</div>
 
-			<!-- 如果需要导航按钮 -->
-			<div class="swiper-button-prev left"></div>
-			<div class="swiper-button-next right"></div>
+	<div class="ty-bannar">
+		<img src="./images/bannar.png" alt="">
+		<div class="detial">
+			<img src="./images/logo.png" alt="" class="logo">
+			<h2>清华大学-新加坡管理大学首席财务官会计硕士双学位项目</h2>
+			<h3>Tsinghua University-Singapore Management University MCFO & MPA</h3>
 		</div>
-	</section>
+	</div>
 
-	<section class="index-project">
-		<div class="title clearfix container">
-			<p>教学项目</p>
-			<p class="txt one_cut">departments</p>
+	<div class="ty-title">
+		<i></i>
+		<h2>项目概况</h2><img src="./images/name-1.png" alt="">
+	</div>
+
+	<div class="ty-about">
+		<img src="./images/bac-2.png" alt="">
+		<div class="left">
+			<h3 class="title-min">项目简介</h3>
+			<p>清华大学与新加坡管理大学（SMU）合作举办会计专业硕士研究生教育项目（专业名称：会计硕士，专业代码：125300）由清华大学和新加坡管理大学利用两校在财务会计学科上的优势，深度整合双方资源创立，旨在培养具有全球视野的财务管理领袖。课程涵盖财务、金融、管理三大模块，全方位提升财务知识和管理技能。
+			</p>
+			<p>学制为两年，学生在规定期限内完成项目课程要求，可获得清华大学硕士研究生学历、会计专业硕士学位，以及新加坡管理大学首席财务官领导力理学硕士学位。
+			</p>
 		</div>
+	</div>
 
-		<ul class="project-list">
+	<div class="ty-sp">
+		<h3 class="title-min">项目简介</h3>
+		<ul>
 			<li>
-				<a href="">
-					<img src="./images/new/project-1.png" alt="">
-					<div class="in">
-						<h3>经济学</h3>
-						<h4>economics</h4>
-						<p>培养既掌握系统的经济学与金融学理论和分析方法，又具备解决现代经济特别是金融领域中实际问题的技能，既具有国际视野同时也了解中国国情的高素质复合型经济和金融人才。</p>
-					</div>
-				</a>
+				<img src="./images/icon-1.png" alt="">
+				<h3>中西合璧 双重学位</h3>
+				<p>清华大学和新加坡管理大学利用两校在财务会计学科上的优势，深度整合双方资源，为项目提供强大师资。满足两校毕业条件，可获得清华大学硕士研究生学历和会计硕士学位，以及新加坡管理大学首席财务官领导力理学硕士学位。
+				</p>
 			</li>
 			<li>
-				<a href="">
-					<img src="./images/new/project-2.png" alt="">
-					<div class="in">
-						<h3>经济学</h3>
-						<h4>economics</h4>
-						<p>培养既掌握系统的经济学与金融学理论和分析方法，又具备解决现代经济特别是金融领域中实际问题的技能，既具有国际视野同时也了解中国国情的高素质复合型经济和金融人才。</p>
-					</div>
-				</a>
+				<img src="./images/icon-2.png" alt="">
+				<h3>财务深度 注重实践</h3>
+				<p>课程设置围绕提升财务管理人员的综合能力，重塑财务管理知识结构，搭建全面系统的财务知识体系。课程注重学术性和实务性的结合，定期邀请财政、税收、审计等政府部门及监管机构资深人士走进课堂。同时，项目配有行业导师，为学生分享行业经验和进行实战指导。
+				</p>
+			</li>
+			<li>
+				<img src="./images/icon-3.png" alt="">
+				<h3>金融广度 思维重塑</h3>
+				<p>项目帮助财务管理者跳出财务本位思维，全方位多角度了解企业融资运作机制，风险管理工具，投资并购手段，培养其具备复合型的知识结构、敏锐的分析判断能力和前瞻的战略眼光，真正成为具有国际化视野的企业智囊。
+				</p>
+			</li>
+			<li>
+				<img src="./images/icon-4.png" alt="">
+				<h3>战略高度 全球视野</h3>
+				<p>为拓展学生国际视野，项目组织学生在读期间进行海外模块学习、参与清华经管学院国际交换项目、引入海外名师和世界500强企业领袖走进课堂。依托清华经管学院平台优势，学生高频率、零距离与海内外知名企业家、国际知名学者以及我国政府及财经部门领导人面对面交流。
+				</p>
 			</li>
 		</ul>
-	</section>
+	</div>
 
-	<section class="student_life">
-		<div class="title clearfix container">
-			<p>项目活动</p>
-			<p class="txt one_cut">ACTIVITIES</p>
-			<a class="activity-more" href="practice.html"></a>
+	<div class="ty-title">
+		<i></i>
+		<h2>课程体系</h2><img src="./images/name-2.png" alt="">
+	</div>
+
+	<div class="ty-class">
+		<div class="l">
+			<h3 class="title-min">课程体系</h3>
+			<img src="./images/yuan.png" alt="">
 		</div>
-		<div class="student_content clearfix student-swiper-container">
-			<div class="swiper-wrapper">
-				<div class="student_min fl swiper-slide">
-					<a href="" class="in">
-						<img src="./images/new/index-4.png" alt="">
-						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
-						<p class="p2 four_cut">
-							2018年12月13日下午，清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行。清华经管学院白重恩院长与60多位来自不同年级和专业的本科生进行了深入交流。作为白重恩院长履...
-						</p>
-						<img class="to" src="./images/right.png" alt="">
-					</a>
-				</div>
-				<div class="student_min fl swiper-slide">
-					<a href="" class="in">
-						<img src="./images/new/index-3.png" alt="">
-						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
-						<p class="p2 four_cut">我不喜欢循规蹈矩地走商科学生的道路 ，而是更喜欢在时代浪潮下做有意义的和有创造力的事情。</p>
-						<img class="to" src="./images/right.png" alt="">
-					</a>
-				</div>
-				<div class="student_min fl swiper-slide">
-					<a href="" class="in">
-						<img src="./images/new/index-5.png" alt="">
-						<p class="p1">清华经管学院“院长下午茶”本科生专场活动在舜德楼116举行</p>
-						<p class="p2 four_cut">多尝试，发现自己喜欢的，就朝着这个方向努力。过了高考这个坎，时间不是最重要的因素了，试错的时间是有价值的。</p>
-						<img class="to" src="./images/right.png" alt="">
-					</a>
-				</div>
+
+		<div class="r">
+			<ul>
+				<li>
+					<img src="./images/list-1.png" alt="">
+					<p><em>财务模块</em><span>Accounting Module</span></p>
+					<p>
+						● 国际财务报告<br>
+						● 战略财务分析<br>
+						● 高级管理会计<br>
+						● 税务筹划<br>
+						● 会计实践专题
+					</p>
+				</li>
+				<li>
+					<img src="./images/list-2.png" alt="">
+					<p><em>金融模块</em><span>Finance Module</span></p>
+					<p>
+						● 金融风险管理<br>
+						● 全球经济与资本市场<br>
+						● 投资学<br>
+						● 兼并收购与企业重组<br>
+						● 融资决策与公司估值
+					</p>
+				</li>
+				<li>
+					<img src="./images/list-3.png" alt="">
+					<p><em>管理模块</em><span>Management Module</span></p>
+					<p>
+						● 战略管理<br>
+						● 公司治理与风险管理<br>
+						● 商业智能分析<br>
+						● 商业伦理与法律<br>
+						● 公司沟通<br>
+					</p>
+				</li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="ty-class-2">
+		<img src="./images/big-bac.png" alt="">
+		<h3 class="title-min">第二课堂</h3>
+		<div class="in">
+			<div class="in-text">
+				<h5><span>1. </span>首席财务官论坛</h5>
+				<p>依托在会计和财务管理学科的领先优势和深厚积淀，论坛邀请业界精英、学界领袖及政府官员汇聚一堂，聚焦当前热点、展望未来发展，共同探索“新经济时代的企业转型与CFO新思维”。</p>
+			</div>
+			<div class="in-text">
+				<h5><span>2. </span>清新荟CFO系列沙龙</h5>
+				<p>为清华校友、项目现有学生、潜在学生提供与老师、业界人士交流互动的平台。同时，聚集财务、金融、实业领域对财务知识感兴趣的同仁，碰撞思想的火花。</p>
 			</div>
 		</div>
-		<div class="boll student-boll"></div>
-	</section>
+		<div class="in in-2">
+			<div class="in-text">
+				<h5><span>3. </span>首席财务官论坛</h5>
+				<p>以现阶段行业热点、课后引申话题等为主题，以圆桌探讨的形式进行。分享会由相关领域的同学作为主要讨论嘉宾，深度探讨行业现状与发展潜力，把握发展趋势。</p>
+			</div>
+			<div class="in-text">
+				<h5><span>4. </span>企业参访</h5>
+				<p>与企业近距离接触，更深刻理解会计等知识在商业领域中的应用和实践，并深入了解CFO职业发展、行业的融合与创新发展，启发引导学生的未来规划，并提供实际的资源和支持。</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="ty-see">
+		<img src="./images/bac-3.png" alt="">
+		<h3 class="title-min">国际视野</h3>
+		<p>为拓展学生的国际视野，深入了解世界发达国家和地区的财务发状态，项目组织学生在读期间进行海外访学。</p>
+	</div>
+
+	<div class="ty-title">
+		<i></i>
+		<h2>师资阵容</h2><img src="./images/name-3.png" alt="">
+	</div>
 
 	<div class="ty-teacher">
-		<div class="title clearfix container">
-			<p>师资力量</p>
-			<p class="txt one_cut">faculty</p>
-			<a class="activity-more" href=""></a>
-		</div>
+		<h3 class="title-min">师资力量</h3>
 
 		<div class="teacher-list">
 			<div class="swiper-container-teachers">
@@ -139,7 +180,20 @@
 						<ul>
 							<li>
 								<a href="">
-									<img src="./images/new/xz.png" alt="">
+									<img src="./images/person-1.png" alt="">
+									<div class="in">
+										<h3>陈 晓</h3>
+										<p>清华大学经济管理学院会计系教授</p>
+										<p>中国税务学会理事</p>
+										<p>中国会计学会理事</p>
+										<p>美国杜兰大学博士</p>
+										<p>美国杜兰大学博士</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<img src="./images/person-1.png" alt="">
 									<div class="in">
 										<h3>白重恩</h3>
 										<p>弗里曼讲席教授</p>
@@ -150,7 +204,7 @@
 							</li>
 							<li>
 								<a href="">
-									<img src="./images/new/xz.png" alt="">
+									<img src="./images/person-1.png" alt="">
 									<div class="in">
 										<h3>白重恩</h3>
 										<p>弗里曼讲席教授</p>
@@ -161,7 +215,7 @@
 							</li>
 							<li>
 								<a href="">
-									<img src="./images/new/xz.png" alt="">
+									<img src="./images/person-1.png" alt="">
 									<div class="in">
 										<h3>白重恩</h3>
 										<p>弗里曼讲席教授</p>
@@ -172,7 +226,18 @@
 							</li>
 							<li>
 								<a href="">
-									<img src="./images/new/xz.png" alt="">
+									<img src="./images/person-1.png" alt="">
+									<div class="in">
+										<h3>白重恩</h3>
+										<p>弗里曼讲席教授</p>
+										<p>经济系 教授</p>
+										<p>清华大学经济管理学院 院长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<img src="./images/person-1.png" alt="">
 									<div class="in">
 										<h3>白重恩</h3>
 										<p>弗里曼讲席教授</p>
@@ -188,7 +253,7 @@
 							<ul>
 								<li>
 									<a href="">
-										<img src="./images/new/xz.png" alt="">
+										<img src="./images/person-1.png" alt="">
 										<div class="in">
 											<h3>白重恩</h3>
 											<p>弗里曼讲席教授</p>
@@ -199,7 +264,7 @@
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/new/xz.png" alt="">
+										<img src="./images/person-1.png" alt="">
 										<div class="in">
 											<h3>白重恩</h3>
 											<p>弗里曼讲席教授</p>
@@ -210,7 +275,7 @@
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/new/xz.png" alt="">
+										<img src="./images/person-1.png" alt="">
 										<div class="in">
 											<h3>白重恩</h3>
 											<p>弗里曼讲席教授</p>
@@ -221,24 +286,7 @@
 								</li>
 								<li>
 									<a href="">
-										<img src="./images/new/xz.png" alt="">
-										<div class="in">
-											<h3>白重恩</h3>
-											<p>弗里曼讲席教授</p>
-											<p>经济系 教授</p>
-											<p>清华大学经济管理学院 院长</p>
-										</div>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="swiper-slide">
-							<ul>
-								<li>
-									<a href="">
-										<img src="./images/new/xz.png" alt="">
+										<img src="./images/person-1.png" alt="">
 										<div class="in">
 											<h3>白重恩</h3>
 											<p>弗里曼讲席教授</p>
@@ -256,32 +304,260 @@
 		</div>
 	</div>
 
-	<!-- 底部 -->
-	<footer>
-		<div class="container">
-			<div class="footer_top">
-				<div class="fl top_left">
-					<a href="javascript:;"><img src="./images/brand.png" alt=""></a>
-					<p>地址：北京市海淀区清华大学经济管理学院伟伦楼116 邮编：100084</p>
-					<p>Email：ugadmit@sem.tsinghua.edu.cn</p>
+	<div class="ty-teacher-2">
+		<h3 class="title-min">师资力量</h3>
+		<img src="./images/tec-bac.png" alt="">
+		<div class="teacher-list-2">
+			<div class="swiper-container-teachers">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<ul>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<div class="in">
+										<h3>聂庆平</h3>
+										<p>中国证券金融股份有限公司</p>
+										<p>董事长</p>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-slide">
+							<ul>
+								<li>
+									<a href="">
+										<div class="in">
+											<h3>聂庆平</h3>
+											<p>中国证券金融股份有限公司</p>
+											<p>董事长</p>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<div class="in">
+											<h3>聂庆平</h3>
+											<p>中国证券金融股份有限公司</p>
+											<p>董事长</p>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<div class="in">
+											<h3>聂庆平</h3>
+											<p>中国证券金融股份有限公司</p>
+											<p>董事长</p>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<div class="in">
+											<h3>聂庆平</h3>
+											<p>中国证券金融股份有限公司</p>
+											<p>董事长</p>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-				<div class="fr top_right">
-					<a class="f-ifont" href="javascript:;">&#xe65d;
-						<div class="socialwraper"><i><em></em></i><img src="./images/weixinma.png"></div>
-					</a>
-					<a class="f-ifont" href="javascript:;">&#xe882;</a>
-				</div>
-
 			</div>
-			<div class="footer_botttom">
-				<div class="line_bottom"></div>
-				<p class="fl">版权所有：清华大学经济管理学院</p>
-				<p class="fr"><a href="javascript:;">网站地图&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;联系我们&nbsp;&nbsp;</a>/<a
-						href="javascript:;">&nbsp;&nbsp;清华大学主页</a></p>
+			<div class="boll teacher-boll"></div>
+		</div>
+	</div>
+
+	<div class="ty-title">
+		<i></i>
+		<h2>招生政策</h2><img src="./images/name-4.png" alt="">
+	</div>
+
+	<div class="ty-rec">
+		<img src="./images/big-bac-2.png" alt="">
+
+		<h3 class="title-min">师资力量</h3>
+		<div class="l">
+			<div class="in">
+				<h4>招生对象</h4>
+				<p>财务副总、财务总监、财务总经理等有志成为首席财务官的财务领导者。</p>
+				<p>希望在财务领域深入学习的金融行业资深从业者、企业管理层或决策者。</p>
+			</div>
+
+			<div class="in">
+				<h4>学历学位授予</h4>
+				<p><img src="./images/icon-5.png" alt=""> 清华大学：硕士研究生学历、会计硕士学位<br>新加坡管理大学：首席财务官领导力理学硕士学位</p>
+			</div>
+
+			<div class="in">
+				<h4>申请条件</h4>
+				<p>具有国民序列本科学历学位,到入学时有七年以上工作经验，2年以上管理经验（最迟于2013年9月1日前获得相关毕业证书）</p>
+				<p>或具有硕士、博士学位，到入学时有五年以上工作经验（最迟于2015年9月1日前获得相关毕业证书）</p>
 			</div>
 		</div>
-	</footer>
+
+		<div class="r">
+			<div class="in">
+				<h4>招生人数</h4>
+				<p><img src="./images/icon-6.png" alt=""> 每年30人</p>
+			</div>
+
+			<div class="in">
+				<h4>学制和培养方式</h4>
+				<p>非全日制在职授课，每月集中授课一次，每次4天（周四至周日）</p>
+				<p>学制两年，其中18个月授课， 6个月论文撰写。</p>
+				<p>主要授课地点为清华大学，部分课程授课地点为新加坡管理大学。</p>
+			</div>
+
+			<div class="in">
+				<h4>项目学费</h4>
+				<p>待定</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="ty-time">
+		<div class="l">
+			<ul>
+				<li><img src="./images/bj.png" alt=""></li>
+				<li><img src="./images/sh.png" alt=""></li>
+				<li><img src="./images/gz.png" alt=""></li>
+				<li><img src="./images/sz.png" alt=""></li>
+			</ul>
+		</div>
+
+		<div class="r">
+			<img src="./images/ewm.png" alt="">
+			<a href="">预约招生说明会</a>
+		</div>
+	</div>
+
+	<div class="ty-title">
+		<i></i>
+		<h2>报考流程</h2><img src="./images/name-5.png" alt="">
+	</div>
+
+	<div class="ty-progress">
+		<div class="l">
+			<h3 class="title-min">报考流程</h3>
+			<div class="p">2020年5月-10月 在线申请和面试</div>
+
+			<p class="line"> <span>1</span> <span>2</span> <span>3</span></p>
+			<p class="line-2"> <span>在线申请、提交申请材料 </span> <span>材料审核</span> <span>提前面试、<br>专业课笔试</span></p>
+
+			<div class="tb">
+				<p class="th">
+					<span>材料提交截止时间</span><span>面试资格公布时间</span><span>面试专业课笔试</span><span>提前批考核结果公布<span></span>面试地点</span>
+				</p>
+				<p><span>6月14日</span><span>6月19日</span><span>6月27日-28日</span><span>7月10日<span></span>北京</span></p>
+				<p><span>9月24日</span><span>9月30日</span><span>10月10日-11日</span><span>10月16日<span></span>北京</span></p>
+			</div>
+
+			<div class="pg">
+				<span>2020年12月<br>全国管理类联考</span>
+				<span>2021年3月<br>复试</span>
+				<span>2021年4月-7月<br>预录取</span>
+				<span>2021年9月<br>入学</span>
+			</div>
+		</div>
+
+		<div class="r">
+			<h3 class="title-min">资料下载</h3>
+
+			<a href="">招生简章</a>
+			<a href="">宣传册</a>
+			<a href="">常见问题</a>
+		</div>
+	</div>
+
+	<div class="ty-connect">
+		<img src="./images/bacc.png" alt="">
+		<a href="">立即申请</a>
+
+		<div class="in">
+			<h3 class="title-min">联系我们</h3>
+			<p>
+				地址：清华大学经济管理学院伟伦楼241<br>
+				电话：010-6278 6773 / 6278 9623<br>
+				微信：TsinghuaMCFO<br>
+				公众号：清华经管在职硕士<br>
+				邮箱：mpacc@sem.tsinghua.edu.cn
+			</p>
+		</div>
+
+		<div class="ewm">
+			<img src="./images/ewm-2.png" alt="">
+			<p>微信公众号<br>清华经管在职硕士</p>
+		</div>
+	</div>
+
+	<footer></footer>
 
 	<script src="js/jquery.min.js"></script>
 	<script src="./js/swiper.min.js"></script>
