--- a/web-tsu3/index-2.html
+++ b/web-tsu3/index-2.html
@@ -18,18 +18,106 @@
 		<img src="./images/logo-m.png" alt="">
 	</header>
 	<!-- 引用原来线上代码 -->
-
-	<!-- 引用原来线上代码 end -->
-
-	<div class="itools-2">
+	<div class="aside nav nav-vertival for-pc">
 		<ul>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+		  <li class="wechat"><a href="javascript:void(0)">
+			  <i></i>
+			  <img src="./images//erweima.jpg">
+			</a>
+		  </li>
+		  <li class="phone"><a href="/contact_us.html"><i></i></a></li>
+		  <li class="book"><a href="/material_down.html"><i></i></a></li>
+		  <li class="chat"><a href="/quick-link.html"><i></i></a></li>
+		  <li class="totop" id="returntop"><a href="#"><i></i></a></li>
 		</ul>
-	</div>
+	  </div>
+	  <div class="wapper">
+		<div id="header">
+		  <div class="header_w for-pc" >
+			<div class="header_left">
+			  <ul>
+				<li><a style="margin-left:10px;" href="http://ug.sem.tsinghua.edu.cn/">本科</a>|</li>
+				<li><a href="http://pg.sem.tsinghua.edu.cn/">博士</a>|</li>
+				<li><a href="http://masters.sem.tsinghua.edu.cn/">硕士</a>|</li>
+				<li><a href="http://mba.sem.tsinghua.edu.cn/">MBA</a>|</li>
+				<li><a href="http://emba.sem.tsinghua.edu.cn/">EMBA</a>|</li>
+				<li><a href="http://ee.sem.tsinghua.edu.cn/">高管教育</a>|</li>
+				<li><a href="http://cdc.sem.tsinghua.edu.cn/">职业发展</a>|</li>
+				<li><a href="http://alumni.sem.tsinghua.edu.cn/">校友</a><span>|</span></li>
+			  </ul>
+			</div>
+			<div class="header_right">
+			  <li class="h_entor">
+				<a href="http://www.sem.tsinghua.edu.cn/login.html">用户登录</a>
+			  </li>
+			  <li><a href="http://mail.sem.tsinghua.edu.cn/" target="_blank">经管邮箱</a>|</li>
+			  <li>|<a href="http://www.tsinghua.edu.cn/" target="_blank">清华大学</a>|</li>
+			  <li>|<a href="http://www.sem.tsinghua.edu.cn/sem/SiteMap.html">网站地图</a></li>
+			  <li>|<a href="http://masters.sem.tsinghua.edu.cn/">联系我们</a></li>
+			  <li><span></span><a href="http://www.sem.tsinghua.edu.cn/">经管学院</a></li>
+			  <li><span></span><a onclick="return deleteCRMCookie()" href="http://masters.sem.tsinghua.edu.cn/en/">English
+				  Version</a>|</li>
+			</div>
+		  </div>
+		  <div class="clear for-pc"></div>
+		  <div class="banner_bg for-pc">
+			<div class="banner_middle"><a href="http://www.sem.tsinghua.edu.cn/"><img
+				  src="./images/mst.png" width="1002px" height="82px"></a></div>
+		  </div>
+		  <div id="nav">
+			<div class="mobile-menu for-mobile-db">
+				MENUS <img src="./images/down.png" alt="">
+			</div>
+			<div class="nav topnav clearfix">
+			  <ul>
+				<li class="hason"> <a id="nav_1598" href="http://masters.sem.tsinghua.edu.cn/">首页</a> </li>
+				<li class=""> <a id="nav_1643" href="http://masters.sem.tsinghua.edu.cn/">关于我们</a> </li>
+				<li class="columbia"> <a id="nav_1602"
+					href="http://masters.sem.tsinghua.edu.cn/project_finance.html">教学项目</a>
+				  <div class="child"> <a id="nav_1603" href="http://masters.sem.tsinghua.edu.cn/project_finance.html"
+					  class="">金融硕士</a> <a id="nav_1604" href="http://masters.sem.tsinghua.edu.cn/mpacc/mpaccIndex.html"
+					  class="">会计硕士</a> <a id="nav_1605" href="http://masters.sem.tsinghua.edu.cn/mim/Index.html"
+					  class="">管理硕士</a> <a id="nav_1606" href="http://masters.sem.tsinghua.edu.cn/geda/gedaIndex.html"
+					  class="columbia">清华大学-哥伦比亚大学商务分析硕士双学位</a> </div>
+				</li>
+				<li class="columbia"> <a id="nav_1607"
+					href="http://masters.sem.tsinghua.edu.cn/cultivation_finance.html">培养体系</a>
+				  <div class="child" style="display: none;"> <a id="nav_1608"
+					  href="http://masters.sem.tsinghua.edu.cn/cultivation_finance.html" class="">金融硕士</a> <a id="nav_1609"
+					  href="http://masters.sem.tsinghua.edu.cn/cultivation_account.html" class="">会计硕士</a> <a id="nav_1610"
+					  href="http://masters.sem.tsinghua.edu.cn/cultivation_manage.html" class="">管理硕士</a> <a id="nav_1611"
+					  href="http://masters.sem.tsinghua.edu.cn/cultivation_columbia.html"
+					  class="columbia">清华大学-哥伦比亚大学商务分析硕士双学位</a> </div>
+				</li>
+				<li class="columbia"> <a id="nav_1612"
+					href="http://masters.sem.tsinghua.edu.cn/teacher_finance.html">项目师资</a>
+				  <div class="child" style="display: none;"> <a id="nav_1613"
+					  href="http://masters.sem.tsinghua.edu.cn/teacher_finance.html" class="">金融硕士</a> <a id="nav_1614"
+					  href="http://masters.sem.tsinghua.edu.cn/teacher_account.html" class="">会计硕士</a> <a id="nav_1615"
+					  href="http://masters.sem.tsinghua.edu.cn/teacher_manage.html" class="">管理硕士</a> <a id="nav_1616"
+					  href="http://masters.sem.tsinghua.edu.cn/teacher_columbia.html"
+					  class="columbia">清华大学-哥伦比亚大学商务分析硕士双学位</a> </div>
+				</li>
+				<li class=""> <a id="nav_1645" href="http://masters.sem.tsinghua.edu.cn/international_culture.html">全球视野</a>
+				</li>
+				<li class=""> <a id="nav_1647" href="http://masters.sem.tsinghua.edu.cn/employment_census.html">职业发展</a>
+				</li>
+				<li class=""> <a id="nav_1619" href="http://masters.sem.tsinghua.edu.cn/enrollment_rule.html">招生信息</a>
+				  <div class="child" style="display: none;"> <a id="nav_1620"
+					  href="http://masters.sem.tsinghua.edu.cn/enrollment_rule.html" class="">招生简章</a> <a id="nav_1621"
+					  href="http://masters.sem.tsinghua.edu.cn/enrollment_flow.html" class="">招生流程</a> <a id="nav_1622"
+					  href="http://masters.sem.tsinghua.edu.cn/material_down.html" class="">资料下载</a> <a id="nav_1623"
+					  href="http://masters.sem.tsinghua.edu.cn/project_video.html" class="">项目视频</a> <a id="nav_1624"
+					  href="http://masters.sem.tsinghua.edu.cn/frequent_question.html" class="">常见问题</a> <a id="nav_1625"
+					  href="http://masters.sem.tsinghua.edu.cn/contact_us.html" class="">联系我们</a> </div>
+				</li>
+				<li class="last"> <a id="nav_1626" href="http://masters.sem.tsinghua.edu.cn/contact_us.html">联系方式</a> </li>
+			  </ul>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	<!-- 引用原来线上代码 end -->
 
 	<div class="warp">
 		<div class="ty-bannar">
@@ -40,16 +128,16 @@
 		<div class="itools">
 			<i class="for-mobile"></i>
 			<ul>
-				<li>项目概况</li>
-				<li class="active">课程体系</li>
-				<li>师资阵容</li>
-				<li>招生政策</li>
-				<li>报考流程</li>
+				<li class="active"><a href="#type-1">项目概况</a></li>
+				<li><a href="#type-2">课程体系</a></li>
+				<li><a href="#type-3">师资阵容</a></li>
+				<li><a href="#type-4">招生信息</a></li>
+				<li><a href="#type-5">立即申请</a></li>
 			</ul>
 			<a href="">我要申请</a>
 		</div>
 
-		<div class="ty-title">
+		<div id="type-1" data-type="1" class="ty-title">
 			<i></i>
 			<h2>项目概况</h2><img src="./images/name-1.png" alt="">
 		</div>
@@ -81,7 +169,7 @@
 			</ul>
 		</div>
 
-		<div class="ty-title">
+		<div  id="type-2" data-type="2"  class="ty-title">
 			<i></i>
 			<h2>课程体系</h2><img src="./images/name-2.png" alt="">
 		</div>
@@ -123,7 +211,7 @@
 			</div>
 		</div>
 
-		<div class="ty-title">
+		<div  id="type-3" data-type="3"  class="ty-title">
 			<i></i>
 			<h2>师资阵容</h2><img src="./images/name-3.png" alt="">
 		</div>
@@ -262,7 +350,7 @@
 			</div>
 		</div>
 
-		<div class="ty-title">
+		<div  id="type-4" data-type="4"  class="ty-title">
 			<i></i>
 			<h2>招生政策</h2><img src="./images/name-4.png" alt="">
 		</div>
@@ -443,7 +531,7 @@
 			</div>
 		</div>
 
-		<div class="ty-title">
+		<div  id="type-5" data-type="5"  class="ty-title">
 			<i></i>
 			<h2>立即申请</h2><img src="./images/name-6.png" alt="">
 		</div>
