--- a/web-tsu3/index-1.html
+++ b/web-tsu3/index-1.html
@@ -545,7 +545,7 @@
 
 				<div class="in">
 					<h4>学历学位授予</h4>
-					<p class="img"><img src="./images/icon-5.png" alt=""> 清华大学：硕士研究生学历、会计硕士学位<br>新加坡管理大学：首席财务官领导力理学硕士学位
+					<p class="img"><img src="./images/icon-6.png" alt=""> 清华大学：硕士研究生学历、会计硕士学位<br>新加坡管理大学：首席财务官领导力理学硕士学位
 					</p>
 				</div>
 
@@ -559,7 +559,7 @@
 			<div class="r">
 				<div class="in">
 					<h4>招生人数</h4>
-					<p class="img"><img src="./images/icon-6.png" alt=""> 每年30人</p>
+					<p class="img"><img src="./images/icon-5.png" alt=""> 每年30人</p>
 				</div>
 
 				<div class="in">
@@ -669,7 +669,8 @@
 				</div>
 
 				<div class="pg">
-					<img src="./images/line-3.png" alt="">
+					<img class="for-pc" src="./images/line-3.png" alt="">
+					<img class="for-mobile-db" src="./images/line-3.png" alt="">
 					<span>2020年12月<br>全国管理类联考</span>
 					<span>2021年3月<br>复试</span>
 					<span>2021年4月-7月<br>预录取</span>
