--- a/web-tsu3/index-2.html
+++ b/web-tsu3/index-2.html
@@ -218,6 +218,7 @@
 
 		<div class="ty-teacher">
 			<h3 class="title-min">师资力量<span>（按姓氏拼音首字母排序）</span></h3>
+			<img src="./images/teacher-top.png" alt="">
 
 			<div class="teacher-list">
 				<div class="swiper-container-teachers">
@@ -358,7 +359,6 @@
 		<div class="ty-rec">
 			<img src="./images/2-4.png" alt="">
 
-			<h3 class="title-min">师资力量</h3>
 			<div class="l">
 				<div class="in">
 					<h4>招生对象</h4>
@@ -368,7 +368,7 @@
 
 				<div class="in">
 					<h4>学历学位授予</h4>
-					<p class="img"><img src="./images/2-icon-5.png" alt=""> 清华大学硕士研究生学历<br>清华大学会计硕士学位</p>
+					<p class="img"><img src="./images/2-icon-6.png" alt=""> 清华大学硕士研究生学历<br>清华大学会计硕士学位</p>
 				</div>
 
 				<div class="in">
@@ -382,7 +382,7 @@
 			<div class="r">
 				<div class="in">
 					<h4>招生人数</h4>
-					<p class="img"><img src="./images/2-icon-6.png" alt=""> 每年30人</p>
+					<p class="img"><img src="./images/2-icon-5.png" alt=""> 每年30人</p>
 				</div>
 
 				<div class="in">
@@ -462,7 +462,7 @@
 		</div>
 
 		<div class="ty-progress">
-			
+			<img class="for-pc" src="./images/2-5.png" alt="">
 			<div class="l">
 				<h3 class="title-min">报考流程</h3>
 				<div class="p">2020年5月-10月 在线申请和面试</div>
